--- a/dark-light/package.json
+++ b/dark-light/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://Pri12-3.github.io/nss",
+  "homepage":"https://Pri12-3.github.io/dark-light",
   "name": "dark-light",
   "private": true,
   "version": "0.0.0",
