--- a/dark-light/package.json
+++ b/dark-light/package.json
@@ -1,12 +1,12 @@
 {
-  "homepage":"https://Pri12-3.github.io/dark-light",
+  "homepage":"https://Pri12-3.github.io/dark-light/",
   "name": "dark-light",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy":"npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
